<?xml version="1.0"?>
<package format = "3">
  <name>avt_vimba_camera</name>
  <version>1.0.0</version>
  <description>Wrapper of the Allied Vision Technologies (AVT) VIMBA Ethernet and Firewire SDK.</description>

  <maintainer email="miquel.massot@uib.cat">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/avt_vimba_ros</url>

  <author email="miquel.massot@gmail.com">Miquel Massot</author>
  <author>Allied Vision Technologies</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>camera_info_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>polled_camera</depend>
  <depend>nodelet</depend>
  <depend>cav_msgs</depend>
  <!--depend>libvimba</depend-->
  

  <exec_depend>image_proc</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>

  <build_depend>carma_cmake_common</build_depend>

  <!--run_depend>libvimba</run_depend-->
  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
